@@ -7,6 +7,7 @@ Version 1.7.5 +SVN:
    * New portrait for Merman Spearman
  * Miscellaneous and bugfixes:
    * Fix broken "Skip Ai moves" option.
+   * Fix bug #13268 (corrupted replays due to undo of recall/dismiss)
 
 Version 1.7.5:
  * Campaigns:
